--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+.vs/dr2/v15/Browse.VC.opendb
+*.db-shm
+.vs/dr2/v15/Solution.VC.db-wal
